worked on inquirer to ask the user to provide the year and the semester

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "estin"
   ],
   "author": "Zineddine LOUZANI",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "inquirer": "^8.2.1"
+  }
 }
