changed require to import statement

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estin-student-files",
+  "name": "estin-files",
   "version": "1.0.0",
   "description": "a command line application to help estin students to orgnise their study files in a structured way ",
   "type": "module",
